<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
    <string name="app_name">ReCorriendo</string>
    <string name="action_settings">Preferencias</string>
    <string name="distancia">Distancia</string>
    <string name="genero">Modalidad</string>
    <string name="ciudad">Ciudad</string>
    <string name="lbl_fecha_largada">Largada:</string>
    <string name="lbl_distancia">Distancias:</string>
    <string name="lbl_genero">Modalidades:</string>
    <string name="lbl_direccion">Dirección:</string>
    <string name="chronometer_initial_format">Initial format:<xliff:g id="initial-format">%</xliff:g></string>
    <string name="comenzar">Comenzar</string>
    <string name="frenar">Frenar</string>
    <string name="editar">Editar</string>
    <string name="mis_datos">Mis Carreras</string>
    <string name="filtros">Filtros</string>
    <string name="title_activity_filtros">Preferencias</string>
    <string name="title_activity_carreras">Carreras</string>
    <string name="title_activity_buscar">Buscar Carrera</string>

    <string name="banner_ad_unit_id">ca-app-pub-8024927753633475/9059897347</string>


    <string name="title_activity_detalle_carrera">Detalle</string>
    <string name="title_activity_mis_datos">Mis Carreras</string>
    <string name="title_activity_mis_tiempos">Mis Tiempos</string>
    <string name="lbl_nombre_carrera">Nombre Carrera </string>
    <string name="lbl_fecha_desde">Fecha Desde</string>
    <string name="lbl_fecha_hasta">Hasta</string>
    <string name="Intervalo">Intervalo</string>
    <string name="btn_buscar">Buscar</string>
    <string name="desde">Desde</string>
    <string name="hasta">Hasta</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="drawer_open">Abrir Menu</string>
    <string name="drawer_close">Cerrar Menu</string>
    <string name="action_example">Example action</string>
    <string name="nav_menu_mis_datos">Mis Datos</string>
    <string name="nav_menu_mis_carreras">Mis Carreras</string>
    <string name="nav_menu_mis_tiempos">Mis Tiempos</string>
    <string name="nav_menu_buscar">Buscar Carreras</string>
    <string name="nav_menu_recomendados">Recomendadas</string>
    <string name="nav_menu_preferencias">Preferencias</string>
    <string name="nav_menu_acerca_de">Acerca de Nosotros</string>
    <string name="nav_menu_mis_amigos">Mis Amigos</string>
    <string name="sin_resultados">Sin Resultados</string>
    <string name="lbl_mas_info">Mas Información</string>

    <string name="title_temporizador">Temporizador</string>

    <!-- Button text -->
    <string name="btn_logout_from_google">Logout from Google</string>
    <string name="btn_revoke_access">Revoke Access</string>
    <string name="nav_menu_logout">Logout</string>
    <string name="face_key">930000867023317</string>
    <string name="btn_guardar">Guardar</string>

    <string name="lbl_tiempo">Tiempo</string>
    <string name="lbl_tiempo_km">Tiempo/Km</string>
    <string name="que_distancia_recorres">Que distancia vas a ReCorrer?</string>
    <string name="confirmar_Desanotar">Está seguro que desea borrar la carrera de "Mis Carreras"?</string>
    <string name="confirmar_no_corrida">Está por desmarcar la carrera como \"Corrida\". Se borrarán todos los datos asociados a la carrera. Desea continuar?</string>
    <string name="app_version">Versión 1.2.26</string>
    <string name="title_activity_nuevo_usuario">Nuevo Usuario</string>
    <string name="title_activity_datos_usuario">Mi Info</string>
    <string name="gcm_sender_id">810708404056</string>

    <string name="hello_world">Hello world!</string>
    <string name="corres_grupo">Corres con un grupo?</string>
    <string name="title_activity_filtro_carrera">Filtrar Carreras</string>
    <string name="lbl_ordenamiento">Ordenamiento</string>
    <string name="lbl_campo">Campo</string>
    <string name="lbl_forma">Sentido</string>
    <string name="lbl_filtros_disponibles">Filtros disponibles</string>
    <string name="lbl_modalidad">Modalidad</string>
    <string name="lbl_provincia">Provincia</string>
    <string name="lbl_ciudad">Ciudad</string>
    <string name="lbl_rango_de_fechas">Rango de fechas</string>
    <string name="filtrar">Filtrar</string>
    <string name="lbl_filtrar">Filtrar</string>
    <string name="title_elija_opcion">Elija una opción</string>
    <string name="ok">OK</string>
    <string name="cancelar">Cancelar</string>
    <string name="sin_carreras">No se encontraron carreras</string>
    <string name="confirmacion_desvinculacion_cuenta">Se borrará su cuenta de este dispositivo. Desde continuar?</string>
    <string name="desvincular_cuenta">Desvincular Cuenta</string>
    <string name="title_meses_busqueda">Meses de Búsqueda</string>
    <string name="title_activity_aceca_de_nosotros">Acerca de Nosotros</string>
    <string name="seguinos_en_facebook">Seguinos en Facebook</string>
    <string name="terminos_y_condiciones">Acepto los términos y condiciones</string>
    <string name="title_activity_terminos_ycondiciones">Términos y Condiciones</string>


    <string name="acepto_los_terminos">Acepto los Términos</string>
    <string name="danos_tu_opinion">Danos tu Opinión</string>

    <!--  <string name="host_url">http://192.168.151.81:8080/</string>
     <string name="base_service_url">RestServicesRunning/running</string>-->

    <!--<string name="host_url">http://192.168.1.119:8080/</string>
    <string name="base_service_url">RestServicesRunning/running</string>-->

    <string name="host_url">http://191.237.16.124/</string>
    <string name="base_service_url">RestServicesRunning-0.0.1-SNAPSHOT/running</string>

    <string name="siguiente">Siguiente</string>
    <string name="anterior">Anterior</string>
    <string name="tutorial">Tutorial</string>
    <string name="nav_menu_ayuda">Ayuda</string>
    <string name="background">background</string>
    <string name="title_amigos">Amigos</string>
    <string name="sin_conexion">Sin conexión a internet</string>
    <string name="cargando_carrera">Cargando Carrera…</string>
    <string name="buscando_amigos">Buscando amigos…</string>
    <string name="guardando_usuario">Guardando Usuario…</string>
    <string name="agregar_amigo">Agregar Amigo</string>
    <string name="no_informado">No Informado</string>
    <string name="borrar_amigo">Borrar Amigo</string>
    <string name="bloquear_amigo">Bloquear Amigo</string>
    <string name="desbloquear_amigo">Desbloquear Amigo</string>
    <string name="pendiente_confirmacion">Tu usuario se encuentra pendiente de confirmación. Verificá tu cuenta de email.</string>
    <string name="lbl_inscript_en">Inscripto en:</string>
    <string name="mnu_me_gusta">Me Gusta</string>
    <string name="mnu_inscripto">Agregar a Mis Carreras</string>
    <string name="mnu_corrida">Corrida</string>
    <string name="title_activity_login_sin_red_social">ReCorriendo</string>
    <string name="loggin">Entrar</string>
    <string name="entrando">Entrando…</string>
    <string name="usuario_invalido">Usuario Invalido</string>
    <string name="email_contact">info@recorriendo.com.ar</string>
    <string name="amigos_en_facebook">Amigos en Facebook</string>
    <string name="contactanos">Contactanos</string>
</resources>
