<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    >

    <ImageView
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:id="@+id/img_logo"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginLeft="15dp"
        android:layout_marginTop="15dp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="Carrera de StarWars"
        android:id="@+id/txt_nombre_carrera"
        android:layout_centerHorizontal="true"
        android:gravity="center"
        android:layout_toEndOf="@id/img_logo"
        android:layout_toRightOf="@id/img_logo"
        android:layout_alignParentRight="true"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="20dp"
        android:layout_above="@+id/txt_descripcion"
        android:layout_alignTop="@+id/img_logo" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/lbl_fecha_largada"
        android:id="@+id/lbl_fecha_largada"
        android:layout_below="@+id/txt_descripcion"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="20dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="28/06/2015 15:00 Hs"
        android:id="@+id/txt_fecha_largada"
        android:layout_alignTop="@+id/lbl_fecha_largada"
        android:layout_toRightOf="@+id/lbl_fecha_largada"
        android:layout_toEndOf="@+id/lbl_fecha_largada"
        android:layout_marginLeft="15dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/lbl_distancia"
        android:id="@+id/lbl_distancia"
        android:layout_below="@+id/lbl_fecha_largada"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="10dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="20 Km"
        android:id="@+id/txt_distancia"
        android:layout_alignTop="@+id/lbl_distancia"
        android:layout_toRightOf="@+id/lbl_distancia"
        android:layout_toEndOf="@+id/lbl_distancia"
        android:layout_marginLeft="15dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/lbl_genero"
        android:id="@+id/lbl_genero"
        android:layout_below="@+id/lbl_distancia"
        android:layout_alignLeft="@+id/lbl_distancia"
        android:layout_alignStart="@+id/lbl_distancia"
        android:layout_marginTop="10dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="Todos"
        android:id="@+id/txt_genero"
        android:layout_marginLeft="15dp"
        android:layout_toRightOf="@id/lbl_genero"
        android:layout_alignTop="@id/lbl_genero"
        android:layout_below="@+id/lbl_distancia"
/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/lbl_direccion"
        android:id="@+id/lbl_direccion"
        android:layout_marginTop="10dp"
        android:layout_below="@id/lbl_genero"
        android:layout_alignLeft="@+id/lbl_distancia"
        android:layout_alignStart="@+id/lbl_distancia" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="Av. Rivadavia 2555, Capital Federal"
        android:id="@+id/txt_direccion"
        android:layout_toRightOf="@id/lbl_direccion"
        android:layout_alignTop="@+id/lbl_direccion"
        android:layout_marginLeft="15dp"
        />

    <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="Una carrera para los fanaticos de StarWars que promete...."
        android:id="@+id/txt_descripcion"
        android:layout_below="@+id/img_logo"
        android:layout_alignLeft="@+id/lbl_fecha_largada"
        android:layout_alignStart="@+id/lbl_fecha_largada"
        android:layout_marginTop="10dp" />

    <ScrollView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/scrollView" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/lbl_mas_info"
        android:id="@+id/lbl_mas_info"
        android:layout_below="@+id/lbl_direccion"
        android:layout_alignLeft="@+id/lbl_direccion"
        android:layout_alignStart="@+id/lbl_direccion"
        android:layout_marginTop="10dp"
        android:layout_centerHorizontal="true"
        android:textColor="@color/wallet_link_text_light" />

    <RelativeLayout
        android:orientation="vertical"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="45dp"
        android:layout_below="@+id/lbl_mas_info"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true">

        <ImageButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/ib_temporizador"
            android:src="@drawable/temporizador"
            android:background="#00000000"
            android:layout_marginLeft="40dp"
            android:layout_alignParentLeft="true"
            android:layout_alignParentTop="true"
            android:layout_marginTop="0dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="@android:style/TextAppearance.DeviceDefault.Large"
            android:text="00:00:00:00"
            android:id="@+id/txt_tiempo"
            android:gravity="center_vertical"
            android:textSize="@dimen/abc_text_size_display_1_material"
            android:layout_toRightOf="@+id/ib_temporizador"
            android:layout_toEndOf="@+id/ib_temporizador"
            android:layout_alignParentTop="true"
            android:layout_alignBottom="@+id/ib_temporizador"
            android:typeface="sans"
            android:textAlignment="center" />

    </RelativeLayout>

</RelativeLayout>