<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical"
    android:gravity="center_vertical|center_horizontal">


    <Chronometer
        android:id="@+id/chronometer1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone"
        android:layout_alignParentLeft="true"
        android:layout_marginLeft="0dp"
        android:layout_alignParentTop="true"
        android:layout_marginTop="0dp" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/reloj"
        android:gravity="center_horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="00:"
            android:id="@+id/txt_hora"
            android:layout_alignParentTop="true"
            android:textSize="50sp"
            android:layout_alignParentStart="false"
            android:layout_centerHorizontal="true"
            android:layout_alignParentLeft="false"
            android:layout_alignParentRight="false"
            android:gravity="center_horizontal" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="00:"
            android:id="@+id/txt_minutos"
            android:layout_toRightOf="@+id/txt_hora"
            android:layout_toEndOf="@+id/txt_hora"
            android:layout_alignTop="@+id/txt_hora"
            android:layout_centerHorizontal="true"
            android:textSize="50sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="00"
            android:layout_toRightOf="@+id/txt_minutos"
            android:layout_toEndOf="@+id/txt_minutos"
            android:id="@+id/txt_segundos"
            android:layout_alignTop="@+id/txt_hora"
            android:layout_centerHorizontal="true"
            android:textSize="50sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="00"
            android:id="@+id/txt_milsec"
            android:layout_marginLeft="15dp"
            android:textSize="20sp"
            android:layout_alignParentRight="false"
            android:layout_alignParentEnd="true"
            android:singleLine="true"
            android:layout_alignParentTop="false"
            android:layout_alignRight="@+id/txt_segundos"
            android:layout_alignBottom="@+id/txt_segundos"
            android:layout_marginBottom="10dp" />
    </RelativeLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/reloj"
        android:gravity="center_horizontal"
        android:layout_marginTop="20dp"
        android:id="@+id/linearLayout">

        <Button
            android:layout_width="120dp"
            android:layout_height="wrap_content"
            android:text="@string/comenzar"
            android:id="@+id/button2"
            android:layout_below="@+id/txt_hora"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true" />

        <Button
            android:layout_width="120dp"
            android:layout_height="wrap_content"
            android:text="@string/frenar"
            android:id="@+id/button3"
            android:layout_below="@+id/txt_minutos"
            android:layout_toRightOf="@+id/button2"
            android:layout_toEndOf="@+id/button2" />
    </LinearLayout>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/editar"
        android:id="@+id/button4"
        android:layout_below="@+id/linearLayout"
        android:layout_centerHorizontal="true" />

</RelativeLayout>