<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/btn_carrera_item"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginTop="10dp"
        android:orientation="horizontal"

        android:background="@drawable/item_background"
        android:id="@+id/linearLayout4">

        <ImageView
            android:id="@+id/img_logo_carrera"
            android:layout_width="0dp"
            android:layout_height="fill_parent"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_alignTop="@+id/txt_distancia"
            android:layout_weight="0.2"
            android:background="@null"
            android:src="@mipmap/ic_launcher"
            android:layout_gravity="center"
            android:layout_marginLeft="10dp" />

        <RelativeLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.5"
            android:orientation="vertical"
            android:layout_marginRight="10dp"
            android:layout_marginLeft="10dp"
            android:paddingTop="10dp"
            android:paddingBottom="5dp"
            android:id="@+id/ll_informacion">

            <TextView
                android:id="@+id/txt_nombre_carrera"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center|left"
                android:layout_marginTop="15dp"
                android:gravity="center|left"
                android:singleLine="true"
                android:text="Nombre de Carrera"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textColor="#ff00003c"
                android:layout_marginBottom="15dp"
                android:layout_alignParentLeft="true"
                android:layout_marginLeft="0dp"
                android:layout_alignParentTop="true"
                android:textStyle="bold" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:text="@string/distancia"
                android:id="@+id/lbl_distancia"
                android:layout_below="@+id/txt_nombre_carrera"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/txt_distancia"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="50 Km"
                android:textColor="#ff00003c"
                android:layout_alignBottom="@+id/lbl_distancia"
                android:layout_toRightOf="@+id/lbl_distancia"
                android:layout_toEndOf="@+id/lbl_distancia"
                android:layout_marginLeft="10dp"
                android:textAppearance="?android:attr/textAppearanceSmall" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:text="@string/lbl_tiempo"
                android:id="@+id/lbl_tiempo"
                android:layout_below="@+id/lbl_distancia"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:layout_marginTop="10dp"
                android:textStyle="bold" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:text="@string/lbl_tiempo_km"
                android:id="@+id/lbl_tiempo_km"
                android:layout_below="@+id/lbl_tiempo"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:layout_marginBottom="15dp"
                android:layout_marginTop="10dp"
                android:textStyle="bold" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:text="25 hs/Km"
                android:id="@+id/txt_tiempo_km"
                android:layout_alignTop="@+id/lbl_tiempo_km"
                android:layout_toRightOf="@+id/lbl_tiempo_km"
                android:layout_toEndOf="@+id/lbl_tiempo_km"
                android:layout_marginLeft="10dp" />

            <TextView
                android:id="@+id/txt_tiempo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="0.5"
                android:text="04:00"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:textColor="#ff00003c"
                android:layout_alignBottom="@+id/lbl_tiempo"
                android:layout_toRightOf="@+id/lbl_tiempo"
                android:layout_marginLeft="10dp" />

        </RelativeLayout>
    </LinearLayout>



</RelativeLayout>